Changed some selectors and fixed some spacing in the _quotes_section.scss file.

--- a/scss/_quotes_section.scss
+++ b/scss/_quotes_section.scss
@@ -36,7 +36,7 @@
 }
 
 .quotes__lists_item {
-    background-color: rgb(151, 151, 151);
+    background-color: grey;
     border-radius: 10px;
     margin: 16px;
     padding: 16px;
@@ -45,27 +45,28 @@
 .quotes__activity {
     font-family: 'Open Sans';
     font-size: 14px;
-    color: grey;
+    color: lightgray;
 }
 
 .quotes__date {
     font-size: 12px;
-    color: grey;
+    color: lightgray;
 }
 
-.quotes__writer--evan {
+.quotes__writer {
     margin-inline-start: 54px;
     margin-block-start: -48px;
 }
+
 
 .quotes__lists_item--evan::before {
     content: url('../img/evan.png');
 }
 
-.quotes__writer--jada::before {
+.quotes__lists_item--jada::before {
     content: url('../img/jada.png');
 }
 
-.quotes__writer--aaron {
+.quotes__lists_item--aaron {
     content: url('../img/aaron.png');
 }
