--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -266,7 +266,7 @@ h4 {
   margin-inline-start: 56px; }
 
 .quotes__lists_item {
-  background-color: #979797;
+  background-color: grey;
   border-radius: 10px;
   margin: 16px;
   padding: 16px; }
@@ -274,21 +274,21 @@ h4 {
 .quotes__activity {
   font-family: 'Open Sans';
   font-size: 14px;
-  color: grey; }
+  color: lightgray; }
 
 .quotes__date {
   font-size: 12px;
-  color: grey; }
+  color: lightgray; }
 
-.quotes__writer--evan {
+.quotes__writer {
   margin-inline-start: 54px;
   margin-block-start: -48px; }
 
 .quotes__lists_item--evan::before {
   content: url("../img/evan.png"); }
 
-.quotes__writer--jada::before {
+.quotes__lists_item--jada::before {
   content: url("../img/jada.png"); }
 
-.quotes__writer--aaron {
+.quotes__lists_item--aaron {
   content: url("../img/aaron.png"); }
